# SRanibro

./: .gitignore  README.txt  USER_GUIDE.ja.md  USER_GUIDE.md
sranibro-core/: Cargo.toml  README.txt
sranibro-core/src/: lib.rs
sranibro-core/src/core/: brow_state.rs  eye_state.rs  mod.rs  types.rs
sranibro-core/src/ml/: brightness.rs  brow_net.rs  eye_net.rs  heatmap.rs  mod.rs  preprocess.rs  tvm_params.rs
sranibro-rs/: .gitignore  Cargo.toml  SETUP.md  SOURCE-LICENSE.md  build.rs
sranibro-rs/examples/: ml_keystone.rs
sranibro-rs/research/synthetic-eye-lab/: PHASE1_2_PREREG.md  PHASE1_3A_PREREG.md  PHASE1_3_AMENDMENT1.md  PHASE1_3_AMENDMENT2.md  PHASE1_3_PREREG.md  PHASE1_4_XR5_TRANSFER_PREREG.md  README.md  atlas.rs  atlas_main.rs  atlas_output.rs  experiment.rs  luminance.rs  main.rs  model.rs  moments.rs  output.rs  phase13.rs  phase13_main.rs  phase13_output.rs  plot_results.py  renderer.rs  xr5_geometry_discovery_main.rs  xr5_transfer.rs  xr5_transfer_main.rs  xr5_transfer_output.rs
sranibro-rs/src/: brow_calib.rs  brow_fitrun.rs  brow_train.rs  config.rs  diagnostics.rs  dream_air_calib.rs  engine.rs  geometry_calib.rs  geometry_discovery.rs  geometry_fitrun.rs  lib.rs  logcap.rs  main.rs  output.rs  pipeline.rs  platform.rs  test_alloc.rs  theme.rs  ui.rs  wide_calib.rs  wide_fitrun.rs
sranibro-rs/src/core/: brow_state.rs  eye_state.rs  mod.rs  types.rs  wide_state.rs
sranibro-rs/src/device/: auth.rs  gaze.rs  mod.rs  starvr_adapter.rs  ttp.rs  usb.rs  varjo_adapter.rs  varjo_native_adapter.rs  varjo_sdk.rs  vpe_adapter.rs  vpe_hid.rs  vpe_probe.rs  vr4.rs  vr4_adapter.rs  xr5_adapter.rs
sranibro-rs/src/ml/: brightness.rs  brow_calfit.rs  brow_fit.rs  brow_net.rs  eye_net.rs  eyelid_model.rs  heatmap.rs  mod.rs  preprocess.rs  tvm_params.rs  wide_calfit.rs  wide_net.rs
sranibro-rs/tests/: replay_diag.rs
sranibro-rs/tests/data/: diag_healthy.csv  diag_stale_baseline.csv
sranibro-rs/tools/: bake_brow_weights.py  gen_brow_pp_fixtures.py
